Fix: another tab content visible in achievement tab

--- a/src/css/achievements.css
+++ b/src/css/achievements.css
@@ -215,6 +215,7 @@
   gap: 5px;
   background-color: rgba(from var(--text-color) r g b / 0.05);
   border-radius: 10px;
+  margin: 1px;
   padding: 10px;
   transition: all 0.4s ease-out;
 }
